[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ytget"
version = "0.1.0"
description = "YouTube playlist downloader using yt-dlp"
requires-python = ">=3.10"
dependencies = [
  "yt-dlp",
  "click",
  "rich",
]

[project.scripts]
ytget = "ytget:main"
